--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -66,7 +66,7 @@
       community.docker.docker_compose_v2:
         project_src: /var/docker/{{ docker_deployment_project_name }}/current
         state: present
-        pull: yes
+        pull: always
 
     - name: Run health checks
       ansible.builtin.shell:
